src/test/ui/impl-trait/recursive-type-alias-impl-trait-declaration-too-subtle.stderr
error: could not find defining uses
  --> $DIR/recursive-type-alias-impl-trait-declaration-too-subtle.rs:4:16
   |
LL |     type Foo = impl PartialEq<(Foo, i32)>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/recursive-type-alias-impl-trait-declaration-too-subtle.rs:17:16
   |
LL |     type Foo = impl PartialEq<(Foo, i32)>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

